Se solucionan alertas de sonarqube