@@ -2,17 +2,16 @@ package co.cue.mascotas_service.service;
 
 import co.cue.mascotas_service.dto.MascotaRequestDTO;
 import co.cue.mascotas_service.dto.MascotaResponseDTO;
+import co.cue.mascotas_service.exceptions.MascotaNotFoundException;
 import co.cue.mascotas_service.model.Mascota;
 import co.cue.mascotas_service.repository.MascotaRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.time.LocalDate;
 import java.time.Period;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,7 +33,7 @@ public class MascotaService {
                 .sexo(requestDTO.getSexo())
                 .color(requestDTO.getColor())
                 .peso(requestDTO.getPeso())
-                .duenoId(requestDTO.getDueño_id())
+                .duenoId(requestDTO.getDuenioId())
                 .active(true)
                 .build();
 
@@ -44,11 +43,10 @@ public class MascotaService {
         return mapToResponseDTO(savedMascota);
     }
 
-    @Transactional(readOnly = true)
     public MascotaResponseDTO getMascotaById(Long id) {
         log.info("Buscando mascota con ID: {}", id);
         Mascota mascota = mascotaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada con ID: " + id));
+                .orElseThrow(() -> new MascotaNotFoundException(id));
         return mapToResponseDTO(mascota);
     }
 
@@ -57,7 +55,7 @@ public class MascotaService {
         log.info("Obteniendo todas las mascotas");
         return mascotaRepository.findAll().stream()
                 .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -65,7 +63,7 @@ public class MascotaService {
         log.info("Obteniendo mascotas activas");
         return mascotaRepository.findByActiveTrue().stream()
                 .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -73,23 +71,16 @@ public class MascotaService {
         log.info("Obteniendo mascotas del dueño con ID: {}", ownerId);
         return mascotaRepository.findByDuenoId(ownerId).stream()
                 .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-/*
-    @Transactional(readOnly = true)
-    public List<MascotaResponseDTO> getActiveMascotasByOwner(Long ownerId) {
-        log.info("Obteniendo mascotas activas del dueño con ID: {}", ownerId);
-        return mascotaRepository.findBydueño_idAfterAndActiveTrue(ownerId).stream()
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
-    }*/
+
 
     @Transactional(readOnly = true)
     public List<MascotaResponseDTO> searchMascotasByName(String name) {
         log.info("Buscando mascotas con nombre: {}", name);
         return mascotaRepository.searchByName(name).stream()
                 .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -97,7 +88,7 @@ public class MascotaService {
         log.info("Actualizando mascota con ID: {}", id);
 
         Mascota mascota = mascotaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada con ID: " + id));
+                .orElseThrow(() -> new MascotaNotFoundException(id));
 
 
         mascota.setNombre(requestDTO.getNombre());
@@ -107,10 +98,10 @@ public class MascotaService {
         mascota.setSexo(requestDTO.getSexo());
         mascota.setColor(requestDTO.getColor());
         mascota.setPeso(requestDTO.getPeso());
-
+        mascota.setDuenoId(requestDTO.getDuenioId());
 
         Mascota updatedMascota = mascotaRepository.save(mascota);
-        log.info("Mascota actualizada exitosamente");
+        log.info("Mascota actualizada exitosamente, nuevo dueño ID: {}", requestDTO.getDuenioId());
 
         return mapToResponseDTO(updatedMascota);
     }
@@ -119,7 +110,7 @@ public class MascotaService {
     public void deactivateMascota(Long id) {
         log.info("Desactivando mascota con ID: {}", id);
         Mascota mascota = mascotaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada con ID: " + id));
+                .orElseThrow(() -> new MascotaNotFoundException(id));
         mascota.setActive(false);
         mascotaRepository.save(mascota);
         log.info("Mascota desactivada exitosamente");
@@ -128,10 +119,9 @@ public class MascotaService {
     @Transactional
     public void deleteMascota(Long id) {
         log.info("Eliminando mascota con ID: {}", id);
-        if (!mascotaRepository.existsById(id)) {
-            throw new RuntimeException("Mascota no encontrada con ID: " + id);
-        }
-        mascotaRepository.deleteById(id);
+        Mascota mascota = mascotaRepository.findById(id)
+                .orElseThrow(() -> new MascotaNotFoundException(id));
+        mascotaRepository.delete(mascota);
         log.info("Mascota eliminada exitosamente");
     }
 
@@ -146,7 +136,7 @@ public class MascotaService {
                 .sexo(mascota.getSexo())
                 .color(mascota.getColor())
                 .peso(mascota.getPeso())
-                .dueño_id(mascota.getDuenoId())
+                .duenioId(mascota.getDuenoId())
                 .active(mascota.getActive())
                 .build();
 
